--- a/styles/cards.css
+++ b/styles/cards.css
@@ -6,8 +6,36 @@
     gap: 1em;
     margin: auto;
     padding: 2rem;
+    position: relative;
 }
 
+.descript-card {
+    position: absolute;
+    background-color: white;
+    color: black;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    align-items: center;
+    height: 200px;
+    width: 50%;
+    padding: 2rem;
+    border-radius: 10px;
+    display: none;
+    z-index: 10;
+}
+
+.back {
+  position: absolute;
+  top: 78%;  
+  left: 92%;
+  padding: 10px;
+  margin: auto;
+  background-color: #4070F4;
+  border-radius: 10px;
+  border: 1px solid;
+  color: #fff;
+}
 .slide-content {
     display: flex;
     justify-content: space-around;
