--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,8 +1,9 @@
 footer {
-	background-image: url('../assets/imagens/PACHECOPASSOS.png');
+	/* background-image: url('../assets/imagens/PACHECOPASSOS.png');
 	background-size: cover;
 	background-position: center center;
-	background-repeat: no-repeat;
+	background-repeat: no-repeat; */
+  background-color: rebeccapurple;
 	padding: 25px 0;
 }
 
